raise server
